<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.emobilis.kitchenyetu.Breakfast">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/t" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tasty Breakfast"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textViewf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewf"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/textViewf" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView5"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewb"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewc"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewd"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewe"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewG"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewh"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LIPA NA MPESA" />
    </LinearLayout>

</ScrollView>
